<resources>
    <string name="app_name">TrackMeApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification_text">Recording</string>
    <string name="recording">Recording</string>
    <string name="history">History</string>

    <string name="error_setting_location">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="time">TIME</string>
    <string name="distance_recording_text">DISTANCE</string>
    <string name="current_speed_recording_text">CURRENT SPEED</string>

    <string name="start_button_text">START</string>
    <string name="stop_button_text">STOP</string>
    <string name="pause_button_text">PAUSE</string>
    <string name="resume_button_text">RESUME</string>
    <string name="finish_button_text">FINISH</string>

    <string name="distance_session_text">Distance</string>
    <string name="avg_speed_session_text">Avg. Speed</string>
    <string name="hide_button_text">Hide</string>
    <string name="item_history_duration_text">Duration</string>

    <string name="default_session_name">%s activity</string>
    <string name="saving_session_loading_message">Saving session</string>
    <string name="history_list_empty_text">Let\'s start your first session</string>
</resources>