<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".ui.recording.RecordingFragment">

    <fragment android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                style="@style/TextValue"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_recording_text"/>
                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextValue"
                    android:text="0.0 km"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_speed_recording_text"/>
                <TextView
                    android:id="@+id/tvCurrSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextValue"
                    android:text="0.0 km/h"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabStart"
                    android:layout_width="@dimen/button_recording_size"
                    android:layout_height="@dimen/button_recording_size"
                    app:backgroundTint="@color/colorPrimary"
                    android:src="@android:color/transparent"/>
                <TextView
                    android:id="@+id/tvTextOfFABStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="16dp"
                    android:textColor="@android:color/white"
                    android:text="@string/start_button_text"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/flButtonStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/default_margin_normal">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabStop"
                    android:layout_width="@dimen/button_recording_size"
                    android:layout_height="@dimen/button_recording_size"
                    app:backgroundTint="@color/colorPrimary"
                    android:src="@android:color/transparent"/>
                <TextView
                    android:id="@+id/tvTextOfFABStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="16dp"
                    android:textColor="@android:color/white"
                    android:text="@string/stop_button_text"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>